valid solution met aangepaste grenzen van gantry